# vyn

./: .dockerignore  .gitignore  .vynignore  404.html  CNAME  Cargo.toml  Dockerfile  Dockerfile.cli  LICENSE  README.md  api.html  docker-compose.yml  index.html  introduction.html  print.html  searchindex.js  searchindex.json
.github/workflows/: ci.yml  docker.yml  docs.yml  publish.yml  release.yml
.serena/: project.yml
architecture/: contributing.html  crates.html  overview.html  protocol.html
cli/: add-del.html  auth.html  clone.html  config.html  init.html  push-pull.html  relay.html  share-link.html  status-diff.html  utility.html
concepts/: encryption.html  manifests-blobs.html  overview.html  vault.html
configuration/: env-vars.html  files.html
crates/vyn-cli/: Cargo.toml
crates/vyn-cli/src/: main.rs  output.rs  version.rs
crates/vyn-cli/src/commands/: add.rs  auth.rs  check.rs  clone.rs  config.rs  del.rs  diff.rs  doctor.rs  history.rs  init.rs  link.rs  mod.rs  pull.rs  push.rs  relay.rs  rotate.rs  run.rs  serve.rs  share.rs  status.rs  update.rs
crates/vyn-core/: Cargo.toml  README.md
crates/vyn-core/src/: blob.rs  crypto.rs  diff.rs  ignore.rs  keychain.rs  lib.rs  manifest.rs  merge.rs  models.rs  p2p.rs  relay_storage.rs  storage.rs  wrapping.rs
crates/vyn-relay/: Cargo.toml  README.md  build.rs
crates/vyn-relay/proto/: vyn.proto
crates/vyn-relay/src/: auth.rs  lib.rs  service.rs  store.rs
docs/: .gitignore  book.toml
docs/src/: SUMMARY.md  api.md  introduction.md
docs/src/architecture/: contributing.md  crates.md  overview.md  protocol.md
docs/src/cli/: add-del.md  auth.md  clone.md  config.md  init.md  push-pull.md  relay.md  share-link.md  status-diff.md  utility.md
docs/src/concepts/: encryption.md  manifests-blobs.md  overview.md  security.md  vault.md
docs/src/configuration/: env-vars.md  files.md
docs/src/getting-started/: installation.md  quick-start.md
docs/src/key-management/: architecture.md  rotation.md  sharing.md
docs/src/relay/: docker.md  overview.md  reference.md  storage-backends.md
docs/theme/: head.hbs
getting-started/: installation.html  quick-start.html
key-management/: architecture.html  rotation.html  sharing.html
proto/: vyn.proto
relay/: docker.html  overview.html  reference.html  storage-backends.html
scripts/: install.sh  publish.sh  uninstall.sh
theme/: custom.css
