[package]
name = "vyn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Encrypted env/config sync CLI"
readme = "../../README.md"

[[bin]]
name = "vyn"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
comfy-table.workspace = true
console.workspace = true
dialoguer.workspace = true
ignore.workspace = true
indicatif.workspace = true
walkdir.workspace = true
dirs.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
secrecy.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
vyn-core = { path = "../vyn-core", version = "0.1.4" }
vyn-relay = { path = "../vyn-relay", version = "0.1.4" }
