[package]
name = "vyn-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for vyn. Crypto, keychain, manifest, storage, and diff engine"
readme = "README.md"

[dependencies]
age = { workspace = true, features = ["ssh"] }
ignore.workspace = true
keyring.workspace = true
libp2p.workspace = true
ring.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
similar.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tempfile = "3"
tokio-stream = "0.1"
tonic.workspace = true
vyn-relay = { path = "../vyn-relay", version = "0.1.1" }
walkdir.workspace = true

[dev-dependencies]
uuid.workspace = true
vyn-relay = { path = "../vyn-relay", version = "0.1.1", features = ["test-bypass-auth"] }
